* config/sh/sh.c (calc_live_regs): Don't use initial_value 	optimization for PR_MEDIA_REG.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54600 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jun 13 22:29:40 2002  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* config/sh/sh.c (calc_live_regs): Don't use initial_value
+	optimization for PR_MEDIA_REG.
+
 2002-06-13  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* cpphash.h (_cpp_lex_identifier_trad): Remove.
