* defaults.h (TARGET_VTABLE_ENTRY_ALIGN): New.         (TARGET_VTABLE_DATA_ENTRY_DISTANCE): New.         * doc/tm.texi: Document them.         * config/ia64/ia64.h (TARGET_VTABLE_ENTRY_ALIGN): New.         (TARGET_VTABLE_DATA_ENTRY_DISTANCE): New.         (TARGET_VTABLE_USES_DESCRIPTORS): 4 word descriptors for 32-bit mode.         (ASM_OUTPUT_FDESC): Likewise.
        * class.c (build_vtable): Use TARGET_VTABLE_ENTRY_ALIGN.
        (build_vtbl_initializer): Honor TARGET_VTABLE_DATA_ENTRY_DISTANCE.
        (build_vbase_offset_vtbl_entries): Likewise.
        * rtti.c (build_headof): Likewise.
        (get_tinfo_decl_dynamic): Likewise.
        (create_pseudo_type_info): Likewise.

        * g++.old-deja/g++.abi/vtable2.C (INC_VDATA): New.  Define for
        ia64 ilp32.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54603 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,13 @@
+2002-06-13  Jessica Han  <jessica@cup.hp.com>
+
+	* defaults.h (TARGET_VTABLE_ENTRY_ALIGN): New.
+	(TARGET_VTABLE_DATA_ENTRY_DISTANCE): New.
+	* doc/tm.texi: Document them.
+	* config/ia64/ia64.h (TARGET_VTABLE_ENTRY_ALIGN): New.
+	(TARGET_VTABLE_DATA_ENTRY_DISTANCE): New.
+	(TARGET_VTABLE_USES_DESCRIPTORS): 4 word descriptors for 32-bit mode.
+	(ASM_OUTPUT_FDESC): Likewise.
+
 2002-06-13  Eric Christopher  <echristo@redhat.com>
 
 	* diagnostic.c (output_format): Fix thinko.
