--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-14  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* Makefile.in (libgcc.mk): Depend on specs.
+
 Fri Jun 14 12:15:11 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* sh.md (mulsi3): Update way how to find insns in a sequence.
