--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-13  Jeffrey Law  <law@redhat.com>
+
+	* rs6000.c (rs6000_frame_related): Avoid unwanted sharing
+	of hard registers.
+
 2002-06-14  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* Makefile.in (libgcc.mk): Depend on specs.
