--- a/libstdc++-v3/ChangeLog
+++ b/libstdc++-v3/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-14  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* configure.in (target_alias): Fix.
+	* configure: Regenerate.
+	* aclocal.m4: Regenerate.
+
 2002-06-11  J.T. Conklin  <jtc@acorntoolworks.com>
             Benjamin Kosnik  <bkoz@redhat.com>
 	
