--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-14  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.md (builtin_zapnot): Fix op2 mode.
+
 2002-06-14  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
 
 	* rtl.h (SCHED_GROUP_P): Disallow CODE_LABEL, BARRIER and NOTE.
