--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2002-06-14  Richard Henderson  <rth@redhat.com>
 
+	* fold-const.c (fold) [compare ops]: Move X>=C / X<C transfomation
+	earlier.  Re-factor comparisons vs extrema.
+
+2002-06-14  Richard Henderson  <rth@redhat.com>
+
 	* config/alpha/alpha.md (builtin_zapnot): Fix op2 mode.
 
 2002-06-14  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>
