* convert.c (convert_to_integer) [LSHIFT_EXPR]: Don't pass 	the truncation down when the target type is signed. 	[trunc1]: Use unsigned arithmetic for LSHIFT_EXPR. 	* fold-const.c (extract_muldiv) [NOP_EXPR]: Don't pass through 	the conversion if the target type is a smaller type.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54627 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-14  Eric Botcazou  <ebotcazou@multimania.com>
+
+	* convert.c (convert_to_integer) [LSHIFT_EXPR]: Don't pass
+	the truncation down when the target type is signed.
+	[trunc1]: Use unsigned arithmetic for LSHIFT_EXPR.
+	* fold-const.c (extract_muldiv) [NOP_EXPR]: Don't pass through
+	the conversion if the target type is a smaller type.
+
 2002-06-14  Richard Henderson  <rth@redhat.com>
 
 	* fold-const.c (fold) [compare ops]: Move X>=C / X<C transfomation
