* configure.in (USE_UNWIND_EXCEPTIONS): Add support to set         USE_UNWIND_EXCEPTIONS if --enable-libunwind-exceptions is set.         * configure, config.in: Regenerate.
        * g++spec.c (LIBUNWIND): New.
        (lang_specific_driver): Add it if USE_UNWIND_EXCEPTIONS is set.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54636 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-14  Steve Ellcey  <sje@cup.hp.com>
+
+	* g++spec.c (LIBUNWIND): New.
+	(lang_specific_driver): Add it if USE_UNWIND_EXCEPTIONS is set.
+
 2002-06-13  Jessica Han  <jessica@cup.hp.com>
 
 	* class.c (build_vtable): Use TARGET_VTABLE_ENTRY_ALIGN.
