--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-06-14  Steve Ellcey  <sje@cup.hp.com>
+
+	* configure.in (USE_UNWIND_EXCEPTIONS): Add support to set
+	USE_UNWIND_EXCEPTIONS if --enable-libunwind-exceptions is set.
+	* configure, config.in: Regenerate.
+
 2002-06-14  Eric Botcazou  <ebotcazou@multimania.com>
 
 	* loop.c (check_final_value): Use v->always_executed
