* config/sparc/sparc.h (DYNAMIC_CHAIN_ADDRESS): Add SPARC_STACK_BIAS.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54637 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-14  Jeff Sturm  <jsturm@one-point.com>
+
+	* config/sparc/sparc.h (DYNAMIC_CHAIN_ADDRESS): Add SPARC_STACK_BIAS.
+
 2002-06-14  Steve Ellcey  <sje@cup.hp.com>
 
 	* configure.in (USE_UNWIND_EXCEPTIONS): Add support to set
