--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-15  Gabriel Dos Reis  <gdr@codesourcery.com>
+
+	* cp-tree.h (compiler_error): Remove declaration.
+	* lex.c (compiler_error): Remove definition.
+
 2002-06-14  Steve Ellcey  <sje@cup.hp.com>
 
 	* g++spec.c (LIBUNWIND): New.
