--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-15  Hans-Peter Nilsson  <hp@axis.com>
+
+	* gcc.c-torture/execute/20020615-1.c: New test.
+
 2002-06-13  Hans-Peter Nilsson  <hp@axis.com>
 
 	* gcc.c-torture/execute/20020611-1.c: New test.
