2002-06-15  Nathanael Nerode  <neroden@twcny.rr.com>
	* java/text/ChoiceFormat.java: Update comments from Classpath.
	* java/text/ParseException.java (serialVersionUID): New
	field from Classpath.
	* java/text/ParseException.java: Update formatting & comments
	from Classpath.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@54654 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2002-06-15  Nathanael Nerode  <neroden@twcny.rr.com>
+
+	* java/text/ChoiceFormat.java: Update comments from Classpath.
+	* java/text/ParseException.java (serialVersionUID): New
+	field from Classpath.
+	* java/text/ParseException.java: Update formatting & comments
+	from Classpath.
+
 2002-06-15  Tom Tromey  <tromey@redhat.com>
 
 	* java/util/zip/InflaterInputStream.java (read): Loop if data has
