AbstractMethodError.java: Re-merged with Classpath.
	* java/lang/AbstractMethodError.java: Re-merged with Classpath.
	* java/lang/ArithmeticException.java: Likewise.
	* java/lang/ArrayIndexOutOfBoundsException.java: Likewise.
	* java/lang/ArrayStoreException.java: Likewise.
	* java/lang/Byte.java: Likewise.
	* java/lang/CharSequence.java: Likewise.
	* java/lang/ClassCastException.java: Likewise.
	* java/lang/ClassCircularityError.java: Likewise.
	* java/lang/ClassFormatError.java: Likewise.
	* java/lang/CloneNotSupportedException.java: Likewise.
	* java/lang/Cloneable.java: Likewise.
	* java/lang/Comparable.java: Likewise.
	* java/lang/Compiler.java: Likewise.
	* java/lang/Error.java: Likewise.
	* java/lang/ExceptionInInitializerError.java: Likewise.
	* java/lang/IllegalAccessError.java: Likewise.
	* java/lang/IllegalAccessException.java: Likewise.
	* java/lang/IllegalArgumentException.java: Likewise.
	* java/lang/IllegalMonitorStateException.java: Likewise.
	* java/lang/IllegalStateException.java: Likewise.
	* java/lang/IllegalThreadStateException.java: Likewise.
	* java/lang/IncompatibleClassChangeError.java: Likewise.
	* java/lang/IndexOutOfBoundsException.java: Likewise.
	* java/lang/InheritableThreadLocal.java: Likewise.
	* java/lang/InstantiationError.java: Likewise.
	* java/lang/InstantiationException.java: Likewise.
	* java/lang/InternalError.java: Likewise.
	* java/lang/InterruptedException.java: Likewise.
	* java/lang/LinkageError.java: Likewise.
	* java/lang/NegativeArraySizeException.java: Likewise.
	* java/lang/NoClassDefFoundError.java: Likewise.
	* java/lang/NoSuchFieldError.java: Likewise.
	* java/lang/NoSuchFieldException.java: Likewise.
	* java/lang/NoSuchMethodError.java: Likewise.
	* java/lang/NoSuchMethodException.java: Likewise.
	* java/lang/NullPointerException.java: Likewise.
	* java/lang/NumberFormatException.java: Likewise.
	* java/lang/OutOfMemoryError.java: Likewise.
	* java/lang/Process.java: Likewise.
	* java/lang/Runnable.java: Likewis

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,68 @@
 2002-06-15  Tom Tromey  <tromey@redhat.com>
 
+	* java/lang/AbstractMethodError.java: Re-merged with Classpath.
+	* java/lang/ArithmeticException.java: Likewise.
+	* java/lang/ArrayIndexOutOfBoundsException.java: Likewise.
+	* java/lang/ArrayStoreException.java: Likewise.
+	* java/lang/Byte.java: Likewise.
+	* java/lang/CharSequence.java: Likewise.
+	* java/lang/ClassCastException.java: Likewise.
+	* java/lang/ClassCircularityError.java: Likewise.
+	* java/lang/ClassFormatError.java: Likewise.
+	* java/lang/CloneNotSupportedException.java: Likewise.
+	* java/lang/Cloneable.java: Likewise.
+	* java/lang/Comparable.java: Likewise.
+	* java/lang/Compiler.java: Likewise.
+	* java/lang/Error.java: Likewise.
+	* java/lang/ExceptionInInitializerError.java: Likewise.
+	* java/lang/IllegalAccessError.java: Likewise.
+	* java/lang/IllegalAccessException.java: Likewise.
+	* java/lang/IllegalArgumentException.java: Likewise.
+	* java/lang/IllegalMonitorStateException.java: Likewise.
+	* java/lang/IllegalStateException.java: Likewise.
+	* java/lang/IllegalThreadStateException.java: Likewise.
+	* java/lang/IncompatibleClassChangeError.java: Likewise.
+	* java/lang/IndexOutOfBoundsException.java: Likewise.
+	* java/lang/InheritableThreadLocal.java: Likewise.
+	* java/lang/InstantiationError.java: Likewise.
+	* java/lang/InstantiationException.java: Likewise.
+	* java/lang/InternalError.java: Likewise.
+	* java/lang/InterruptedException.java: Likewise.
+	* java/lang/LinkageError.java: Likewise.
+	* java/lang/NegativeArraySizeException.java: Likewise.
+	* java/lang/NoClassDefFoundError.java: Likewise.
+	* java/lang/NoSuchFieldError.java: Likewise.
+	* java/lang/NoSuchFieldException.java: Likewise.
+	* java/lang/NoSuchMethodError.java: Likewise.
+	* java/lang/NoSuchMethodException.java: Likewise.
+	* java/lang/NullPointerException.java: Likewise.
+	* java/lang/NumberFormatException.java: Likewise.
+	* java/lang/OutOfMemoryError.java: Likewise.
+	* java/lang/Process.java: Likewise.
+	* java/lang/Runnable.java: Likewise.
+	* java/lang/RuntimePermission.java: Likewise.
+	* java/lang/SecurityException.java: Likewise.
+	* java/lang/Short.java: Likewise.
+	* java/lang/StackOverflowError.java: Likewise.
+	* java/lang/StringIndexOutOfBoundsException.java: Likewise.
+	* java/lang/ThreadDeath.java: Likewise.
+	* java/lang/ThreadLocal.java: Likewise.
+	* java/lang/UnknownError.java: Likewise.
+	* java/lang/UnsatisfiedLinkError.java: Likewise.
+	* java/lang/UnsupportedClassVersionError.java: Likewise.
+	* java/lang/UnsupportedOperationException.java: Likewise.
+	* java/lang/VerifyError.java: Likewise.
+	* java/lang/VirtualMachineError.java: Likewise.
+	* java/lang/reflect/InvocationTargetException.java: Likewise.
+	* java/net/BindException.java: Likewise.
+	* java/net/ConnectException.java: Likewise.
+	* java/net/MalformedURLException.java: Likewise.
+	* java/net/NoRouteToHostException.java: Likewise.
+	* java/net/ProtocolException.java: Likewise.
+	* java/net/SocketException.java: Likewise.
+	* java/net/UnknownHostException.java: Likewise.
+	* java/net/UnknownServiceException.java: Likewise.
+
 	* java/io/BufferedOutputStream.java: Re-merged with Classpath.
 	* java/io/CharConversionException.java: Likewise.
 	* java/io/EOFException.java: Likewise.
