toplev.c (rest_of_compilation): Perform a simpler, less costly cleanup of the CFG when not optimizing.
        * toplev.c (rest_of_compilation): Perform a simpler, less costly
        cleanup of the CFG when not optimizing.

From-SVN: r54667

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-16  Jeff Law <law@redhat.com>
+
+	* toplev.c (rest_of_compilation): Perform a simpler, less costly
+	cleanup of the CFG when not optimizing.
+
 2002-06-16  Alan Modra  <amodra@bigpond.net.au>
 
 	* gcc.c (main): Correct startfile_prefix_spec check.
